--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "QuadB",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "build:js": "parcel build ./server.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Gyanendra Verma",
